Update backend environment configuration for Dokploy deployment

--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ _APP_CONSOLE_WHITELIST_EMAILS=
 _APP_CONSOLE_SESSION_ALERTS=enabled
 _APP_CONSOLE_WHITELIST_IPS=
 _APP_CONSOLE_COUNTRIES_DENYLIST=AQ
-_APP_CONSOLE_HOSTNAMES=localhost,indobase.test,indobase.com,*.indobase.com
+_APP_CONSOLE_HOSTNAMES=console.indobase.fun
 _APP_SYSTEM_EMAIL_NAME=Indobase
 _APP_SYSTEM_EMAIL_ADDRESS=noreply@indobase.com
 _APP_SYSTEM_TEAM_EMAIL=team@indobase.com
@@ -22,8 +22,8 @@ _APP_OPTIONS_FORCE_HTTPS=disabled
 _APP_OPTIONS_ROUTER_FORCE_HTTPS=disabled
 _APP_OPENSSL_KEY_V1=your-secret-key
 _APP_DNS=172.16.238.100 # CoreDNS
-_APP_DOMAIN=indobase.test
-_APP_CONSOLE_DOMAIN=localhost
+_APP_DOMAIN=api.indobase.fun
+_APP_CONSOLE_DOMAIN=console.indobase.fun
 _APP_DOMAIN_FUNCTIONS=functions.localhost
 _APP_DOMAIN_SITES=sites.localhost
 _APP_DOMAIN_TARGET_CNAME=cname.localhost
@@ -31,15 +31,15 @@ _APP_DOMAIN_TARGET_A=203.0.0.1
 _APP_DOMAIN_TARGET_AAAA=::1
 _APP_DOMAIN_TARGET_CAA=digicert.com
 _APP_RULES_FORMAT=md5
-_APP_REDIS_HOST=redis
+_APP_REDIS_HOST=indobase-redis-0r47mv
 _APP_REDIS_PORT=6379
-_APP_REDIS_PASS=
-_APP_REDIS_USER=
-_APP_DB_HOST=mariadb
+_APP_REDIS_PASS=Roshan@2505
+_APP_REDIS_USER=default
+_APP_DB_HOST=indobase-bckdb-twffjl
 _APP_DB_PORT=3306
-_APP_DB_SCHEMA=appwrite
-_APP_DB_USER=user
-_APP_DB_PASS=password
+_APP_DB_SCHEMA=bckdb
+_APP_DB_USER=indb
+_APP_DB_PASS=Roshan@2505
 _APP_DB_ROOT_PASS=rootsecretpassword
 _APP_STORAGE_DEVICE=Local
 _APP_STORAGE_S3_ACCESS_KEY=
